# studio-ludev-reverse-engineering

./: .coverage  .gitignore  README.md  check_import.py  docker-compose.yaml  et --hard HEAD~1  github_workflow.sh  pyproject.toml  requirements.txt  ruff.toml  testing.sh
api/: pyproject.toml
api/model/diagram/: models.py
api/model/diagram/api/views/: diagram.py  node.py  system.py
api/model/generator/: models.py  tests.py
api/model/generator/api/schemas/: prototype.py
api/model/generator/api/views/: prototypes.py
api/model/importer/: models.py
api/model/importer/api/: __init__.py
api/model/importer/api/schemas/: __init__.py  importer.py
api/model/importer/api/views/: __init__.py  importer.py
api/model/importer/doc/: example_shop_diagram.py  please_read.txt
api/model/importer/migrations/: 0001_initial.py  0002_rename_prototype_importer.py
api/model/importer/src/: doc_src.md  extract_prototype_main.py  import_diagram.py  import_diagram_simple.py
api/model/importer/src/utils/: diagram_template.py  django_environment_setup.py  doc_utils.md  helper.py  node_handler.py  relationship_handler.py
api/model/importer/tests/: doc_tests.md  test_helper.py  test_node_handler.py  test_relationship_handler.py
api/model/importer/utils/: diagram_template.py  extract_relationships.py
api/model/llm/: handler.py
api/model/llm/prompts/: diagram.py
api/model/metadata/api/views/: defaulting.py  interfaces.py  projects.py  releases.py
api/model/model/: api.py  settings.py
api/model/model/utils/: extract_relationships.py
docs/: setup_wsl.md
(+97 files in other folders)
