[tool.poetry]
name = "ai4mde-studio"
version = "1.0.0"
description = "AI-assisted Model Driven Engineering"
authors = ["Max Boone <contact@maxboone.com>"]
license = "GPLv3"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.2"
psycopg2-binary = "^2.9.9"
django-ninja = "^1.1.0"
pyjwt = "^2.8.0"
django-cors-headers = "^4.3.1"
daphne = "^4.0.0"
channels = "^4.0.0"
sentry-sdk = "^1.40.4"
drf-yasg = "^1.21.7"
jinja2 = "^3.1.4"
requests = "^2.32.3"
openai = "^1.47.0"
networkx = "^3.4.2"
numpy = "^2.2.1"
groq = "^0.15.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.13"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "model.settings"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.pytest.ini_options]
# ignore DeprecationWarning raised by locale.getdefaultlocale in django utils
filterwarnings = ["ignore::DeprecationWarning:django.utils.encoding.*:"]
